[gd_scene load_steps=2 format=3 uid="uid://interaction_menu_123"]

[ext_resource type="Script" path="res://src/ui/interaction_menu.gd" id="1_script"]

[node name="InteractionMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -85.0
offset_right = 100.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 25.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
theme_override_constants/separation = 10

[node name="TalkButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Talk"

[node name="TradeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Trade"

[node name="InspectButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Inspect"

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Leave"

[node name="XCloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -25.0
offset_bottom = 25.0
grow_horizontal = 0
text = "X"

[connection signal="pressed" from="Panel/VBoxContainer/TalkButton" to="." method="_on_talk_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/TradeButton" to="." method="_on_trade_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/InspectButton" to="." method="_on_inspect_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/CloseButton" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Panel/XCloseButton" to="." method="_on_close_pressed"]
